# spbu-c-homeworks

./: CMakeLists.txt  LICENSE  README.md
1.introduction/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
10.lexer/: task_2.c
11.parser/: task_1.c
3.pointers/: task_1.c  task_2.c
4.data_presentation/: task_1.c  task_2.c  task_3.c
6.complexity_and_sorting/: task_1.c  task_2.md
7.searchTrees/: task_1.c
9.graphs/: task_1.c
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  final1  spbu_c_homeworks.cbp
final/: task_1.c  task_2.c  task_3.c
final2/: final_1.c  second_3.c  test2_1.c  test2_3.c
lib/: binary.c  binary.h  slice.c  slice.h  stack.c  stack.h
lib/arrayList/: arrayList.c  arrayList.h
lib/binary/: binary.c
lib/commonUtils/: arrayOperations.c
lib/dataStructures/: dict.c  dict.h  list.c  list.h  string.c  string.h  vector.c  vector.h
lib/date/: date.c  date.h
lib/dfa/: dfa.c  dfa.h
lib/dict/: dict.c  dict.h
lib/doublyLinkedList/: doubly_linked_list.c  doubly_linked_list.h
lib/graph/: graph.c  graph.h
lib/heap/: heap.c  heap.h
lib/io/: csv.c  csv.h
lib/lettersCounter/: latinLowercase.c  latinLowercase.h
lib/list/: list.c  list.h
lib/mergeSort/: mergeSort.c  mergeSort.h
lib/stack/: stack.c  stack.h
lib/treemap/: treemap.c  treemap.h
lib/values/: values.c  values.h
retest1/: task_2.c  task_3.c
test1/: task_1.c  task_2.c
test2/: task_1.c  task_2.c  task_3.c
